# monitor-server

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  start.sh
cli/: Cargo.toml
cli/src/: main.rs
proxy/: Cargo.toml
proxy/src/: main.rs  server.rs
src/: db.rs  function.rs  main.rs  model.rs
templates/: do_login.hbs  login.hbs  statistics.hbs
templates/static/: term.js
