[package]
name = "monitor_server"
version = "0.1.0"
authors = ["smoothsea"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.8"
rusqlite = "0.23.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"
rand = "0.8.0"
ssh2 = "0.9"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "handlebars_templates", "serve"]