[package]
name = "monitor_server"
version = "0.1.0"
authors = ["smoothsea"]
edition = "2018"

[workspace]
members = [
    "cli",
    "proxy",
]

[dependencies]
ssh2 = "0.9"
md5 = "0.7.0"
rand = "0.8.0"
chrono = "0.4"
regex = "1.5.4"
rocket = "0.4.8"
rusqlite = "0.23.1"
lazy_static = "1.4.0"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
paho-mqtt = "0.12.5"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "handlebars_templates", "serve"]
